Update dependencies for CVE-2022-2421

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "chess.js": "^0.12.0",
     "express": "^4.17.1",
     "seedrandom": "^3.0.5",
-    "socket.io": "^4.2.0",
+    "socket.io": "^4.2.1",
     "socket.io-client": "^4.3.2",
     "workerpool": "^6.2.1",
-    "wasm-chess-algorithms": "^1.0.0"
+    "socket.io-parser": ">=4.2.1"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
